# keybo

./: .gitignore  IDEAS-LEDGER.md  OPEN_QUESTIONS.md  PREREGISTRATIONS.md  Paper_STALE_NOTICE.md  README.md  TODO.md  best_hyperparams.json  bigram_model.pkl  classifier.py  flake.nix  hyperparameter_tuning.py  justfile  optimizer.py  print_stats.py  process_dataset.py  pyproject.toml  scorer.py  simulated_annealing.py  three_opt.py  trigram_model.pkl  trigram_model.py  two_opt.py  utils.py  wpm_conditioned_model.py
.github/workflows/: ci.yml
agent-artifacts/: OQ1-frequency-feature.md  OQ10-trigram-target.md  OQ11-interval-definition.md  OQ12-typo-dynamics.md  OQ13-modifier-semantics.md  OQ14-row-practice-identifiability.md  OQ2-freq-saturation.md  OQ3-frequency-distribution.md  OQ4-objective.md  OQ5-generalization-validation.md  OQ6-geometry.md  OQ7-nonqwerty-leverage.md  OQ8-sliced-evaluation.md  OQ9-local-speed-conditioning.md  README.md  bigram-experiment-backlog.md  design-audit-2026-07-03.md  final-layout-2026-07-04.md  gaps-and-roadmap.md  gates-audit.md  goodhart-row-blindness.md  learnings.md  redflag-dvorak-bigram-objective.md
agent-artifacts/experiments/: arms_matrix.py  band2_calibration.py  band2_impact.py  blind_pace_max.py  blind_pace_probe.py  cond_rebuild.py  cond_target_arms.py  ewma_arms.py  final_search.py  fingerload_frontier.py  lag2_blindness.py  oq14_position_practice.py  oq1_freq_feature_probe.py  perwpm_search.py  probe_b_alone.py  redflag_and_buckets.py  robustness_arms.py  roll_error_probe.py  skill_strata.py  takeover_probes.py  trigram_search.py  trionly_oxey.py  tune_sweep_resume.py  wpm_banding.py
data/community/: README.md
data/corpus/: 1-skip31.txt
docs/: analyzer.md  layout-k30m.md  layout-k31.md  layout-p10-w05.md  layout-p11-w05.md  layout-p13stab-winner.md  layout-p14-coopt.md  layout-p17.md  layout-p9lr-w05.md  phase-d-community-data-design.md  research-roadmap.md
docs/plans/: 2026-07-03-rewrite.md
keybo/: __init__.py  geometry.py  layout.py  layouts.py
keybo/cli/: __init__.py  __main__.py  (+3 more)
legacy/: README.md  best_hyperparams.json  classifier.py  logfile.txt  optimizer.py  print_stats.py  process_dataset.py  scorer.py  trigram_model.pkl  trigram_model.py  wpm_conditioned_model.py
tests/: conftest.py  test_geometry.py  test_layout.py
(+116 files in other folders)
