[project]
name = "keybo"
version = "0.1.0"
description = "Data-driven keyboard layout optimizer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
keybo = "keybo.cli.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
# The archived pre-rewrite tree is not held to the new lint rules.
extend-exclude = ["legacy", "agent-artifacts"]

[tool.ruff.lint]
# E/F pycodestyle+pyflakes, I import-sort, B bugbear, UP pyupgrade, SIM simplify.
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: end-to-end tests that run a real (tiny) optimization or training loop",
]
